[package]
name = "rustshark"
version = "0.3.1"
edition = "2024"
description = "RustShark is a Rust implementation of a packet sniffer, inspired by Wireshark. It allows you to capture and analyse network traffic in real-time, providing insights into the data being transmitted over the network."
license = "MIT"
authors = ["PAdventures <padventures.contact@gmail.com>"]
repository = "https://github.com/PAdventures/RustShark"
keywords = ["networking", "pcap", "packet-sniffer", "wireshark"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = "4.6.0"
ctrlc = "3.5.2"
libc = "0.2.183"
pcap = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
